--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>Hello</head>
-<body></body>
+
+<head><title>lluidesia.github.io</title></head>
+
+<body>
+<h2>Hello!</h2>
+<p>My name is Liuda <3 </p>
+</body>
+
 </html>
